八股文内容更新

--- a/src/views/home/findJob/前端八股文汇总背诵版.md
+++ b/src/views/home/findJob/前端八股文汇总背诵版.md
@@ -1,581 +1,417 @@
 # HTML
 
-1. HTML语义化标签 有哪些？
+1. HTML语义化标签有哪些；对HTML语义化理解；SGML 、 HTML 、XML 和 XHTML 的区别；简述一下你对 HTML 语义化的理解
+
+2. HTML5新增特性； HTML5 为什么只需要写 <!DOCTYPE HTML >,而不需要引入 DTD ；HTML5 元素的分类； HTML5 有哪些新特性、移除了那些元素；如何处理 HTML5 新标签的浏览器兼容问题； HTML5 的 form 的自动完成功能是什么；HTML5 的离线储存怎么使用,工作原理能不能解释一下；HTML5 新增的表单元素有哪些；在 HTML5 中,哪个方法用于获得用户的当前位置；用于预格式化文本的标签是
+
+3. DOCTYPE(⽂档类型) 的作⽤；DOCTYPE 的作用是什么；DTD 介绍；DHTML 是什么；文档的不同注释方式
+
+4. iframe 有那些优点和缺点；iframe 有那些缺点
+
+5. Canvas和SVG的区别；Canvas 和 SVG 有什么区别
+
+6. script标签中defer和async的区别；async 和 defer 的作用是什么?有什么区别?(浏览器解析过程)
+
+7. 行内元素、块级元素、空（void）；行内元素定义；块级元素定义；行内元素与块级元素的区别； 空元素定义
+
+8. BOM 和 DOM 的区别；DOM操作(增删改查) 异；怎样添加、移除、移动、复制、创建和查找节点
+
+9.  标准模式与兼容模式各有什么区别；实现不使用 border 画出 1 px 高的线,在不同浏览器的标准模式与怪异模式下都能保持一致的效果
+
+10.  link 标签定义； title 与 h1 的区别；<img>的 title 和 alt 有什么区别；常用的 meta 标签；head 标签中必不少的是哪些；b 与 strong 的区别和 i 与 em 的区别； Label 的作用是什么?是怎么用的；src和href的区别
+
+11. 页面导入样式时,使用 link 和 @import 有什么区别；link和@import的区别
+
+12.  DOMContentLoaded 事件和 Load 事件的区别
+
+14. 页面可见性(Page Visibility API) 可以有哪些用途；如何在页面上实现一个圆形的可点击区域
+
+15. 网页验证码是干嘛的,是为了解决什么安全问题；
+
+16. 渐进增强和优雅降级的定义
+
+17. attribute 和 property 的区别是什么
+
+18. 对 web 标准、可用性、可访问性的理解；Html 规范中为什么要求引用资源不加协议头http或者https
+
+19.  IE 各版本和 Chrome 可以并行下载多少个资源；Chrome 中的 Waterfall
+
+20. Flash、Ajax 各自的优缺点,在使用中如何取舍
+
+21. 怎么重构页面
+
+22. css reset 和 normalize.css 有什么区别
+
+23. disabled 和 readonly 的区别
+
+24. 扫描二维码登录网页是什么原理,前后两个事件是如何联系的
+
+    
 
 # CSS
 
-1. 讲一下盒模型，普通盒模型和怪异盒模型有什么区别？
-2. 讲一下flex弹性盒布局？
-3. flex:1; 是哪些属性的缩写，对应的属性代表什么含义
-4. flexbox 布局的属性和使用场景
-5. 块元素和行内元素区别是什么？常见块元素和行内元素有哪些？
-6. 伪类和伪元素的区别是什么？
-7. 常见的水平垂直居中实现方案
-8. CSS如何实现垂直居中？
-9. 实现水平垂直居中
-10. 图片居中
-11. CSS常见的选择器有哪些？
-12. CSS的优先级如何计算？
-13. 长度单位px、em和rem的区别是什么？
-14. 浮动塌陷问题解决方法是什么？
-15. position属性的值有哪些？各个值是什么含义？
-16. BFC、IFC是什么？
-17. BFC 块级格式化上下文
-18. 隐藏元素的方法
-19. 回流与重绘
+1. 讲一下盒模型，普通盒模型和怪异盒模型有什么区别；介绍一下标准的 CSS 的盒子模型?低版本 IE 的盒子模型有什么不同的； 内联盒模型基本概念；如何去除 inline-block 元素间间距；li 与 li 之间有看不见的空白间隔是什么原因引起的?有什么解决办法?
 
-**居中与定位：**
+2. 几种常见的 CSS 布局；讲一下flex弹性盒布局；flex:1; 是哪些属性的缩写，对应的属性代表什么含义；flexbox 布局的属性和使用场景；flex布局理解
 
-1. 实现水平垂直居中
-2. 图片居中
+3. BFC、IFC是什么；BFC 块级格式化上下文；对BFC的理解，如何创建BFC；块元素和行内元素区别是什么？常见块元素和行内元素有哪些？；什么是包含块,对于包含块的理解；对 BFC 规范(块级格式化上下文:block formatting context)的理解；IFC 是什么；元素竖向的百分比设定是相对于容器的高度吗
 
-**元素隐藏：**
+4. 常见的水平垂直居中实现方案；CSS如何实现垂直居中，实现水平垂直居中，实现图片居中；两栏布局；三栏布局；如何居中 div；有一个高度自适应的 div,里面有两个 div,一个高度 100px,希望另一个填满剩下的高度；css 实现上下固定中间自适应布局；css 两栏布局的实现；css 三栏布局的实现
 
-1. 隐藏元素的方法
+5. CSS常见的选择器有哪些；CSS选择器和优先级；CSS的优先级如何计算；CSS3新增特性；CSS可继承属性和不可继承属性；CSS 选择符有哪些；CSS 中哪些属性可以继承；CSS 优先级算法如何计算
 
-**CSS基础概念：**
+6. 常见的CSS单位；长度单位px、em和rem的区别是什么；画一条0.5px的线；如何解决1px；画一条 0.5px 的线；使用 rem 布局的优缺点；设备像素、css 像素、设备独立像素、dpr、ppi 之间的区别
 
-1. CSS盒模型
-2. CSS 盒子模型
-3. flex:1; 是哪些属性的缩写，对应的属性代表什么含义
+7. 浮动塌陷问题解决方法是什么；请解释一下为什么需要清除浮动?清除浮动的方式；使用 clear 属性清除浮动的原理；zoom:1 的清除浮动原理
 
-**渲染机制：**
+8. position 常用属性；默认值是什么；position属性的值有哪些；各个值是什么含义；position 的值 relative 和 absolute 定位原点是什么； 绝对定位元素与非绝对定位元素的百分比计算的区别；display &#039;、&#039;position &#039;和 &#039;float &#039;的相互关系；absolute 的 containingblock(包含块)计算方式跟正常流有什么不同
 
-1. BFC问题
-2. BFC 块级格式化上下文
-3. 回流与重绘
+9. dislpay的属性和作用；单行、多行文本溢出；隐藏元素的方法；隐藏元素的方式；display 有哪些值?说明他们的作用；CSS 里的 visibility 属性有个 collapse ；隐藏元素的 background-image 到底加不加载；如何实现单行/多行文本溢出的省略(...)；常见的元素隐藏方式
+
+10. 什么是margin重叠，如何解决；margin 重叠问题的理解；content 与替换元素的关系；margin:auto 的填充规则；margin 无效的情形；border 的特殊性；什么是基线和 x-height；line-height 的特殊性；vertical-align 的特殊性；overflow 的特殊性；无依赖绝对定位是什么；absolute 与 overflow 的关系；relative 的特殊性；margin 和 padding 分别适合什么场景使用；width:auto 和 width:100\x 的区别；为什么 height:100\x 会无效；min-width/max-width 和 min-height/max-height 属性间的覆盖规则
+
+11. 为什么要初始化 CSS 样式；使用 CSS 预处理器吗?喜欢哪个；CSS 优化、提高性能的方法有哪些；浏览器是怎样解析 CSS 选择器的；为什么不建议使用统配符初始化 css 样式；有了使用过Sass、Less 吗，他们的区别是什么；什么是 CSS 预处理器/后处理器
+
+12. 全屏滚动的原理是什么?用到了 CSS 的哪些属性?(待深入实践)；视差滚动效果,如何给每页做不同的动画?(回到顶部,向下滑动要再次出现,和只出现一次分别怎么做；overflow:scroll 时不能平滑滚动的问题怎么处理；offsetWidth/offsetHeight,clientWidth/clientHeight 与 scrollWidth/scrollHeight 的区别
+
+13. 经常遇到的浏览器的兼容性有哪些?原因,解决方法是什么,常用 hack 的技巧；移动端的布局用过媒体查询吗；什么是响应式设计?响应式设计的基本原理是什么?如何兼容低版本的 IE?(待深入了解)；position:fixed;在 android 下无效怎么处理
+
+14. 简单介绍使用图片 base64 编码的优点和缺点；png、jpg、gif 这些图片格式解释一下,分别什么时候用。有没有了解过 webp；浏览器如何判断是否支持 webp 格式图片
+
+15. 实现一个三角形；用纯 CSS 创建一个三角形的原理是什么；实现一个宽高自适应的正方形；实现一个三角形；一个自适应矩形,水平垂直居中,且宽高比为 2:1；CSS 多列等高如何实现
+
+16.  ::before 和:after 中双冒号和单冒号有什么区别?解释一下这 2 个伪元素的作用；伪类与伪元素的区别；关于伪类 LVHA 的解释；CSS3 新增伪类有那些；伪类和伪元素的区别是什么
+  
+17. 如何修改 chrome 记住密码后自动填充表单的黄色背景；怎么让 Chrome 支持小于 12px 的文字；让页面里的字体变清晰,变细用 CSS 怎么做；font-style 属性中 italic 和 oblique 的区别；font-weight 的特殊性；text-indent 的特殊性； letter-spacing 与字符间距；word-spacing 与单词间距；white-space 与换行和空格的控制；一个满屏品字布局如何设计
+
+18. CSS3 有哪些新特性?(根据项目回答)；请解释一下 CSS3 的 Flex box(弹性盒布局模型),以及适用场景；简单说一下 css3 的 all 属性
+
+19. 在网页中应该使用奇数还是偶数的字体?为什么呢?
+
+20. 抽离样式模块怎么写,说出思路,有无实践经验
+
+21. 对于 hasLayout 的理解；layout viewport、visual viewport 和 ideal viewport 的区别
+
+22. 如果需要手动写动画,你认为最小时间间隔是多久,为什么?(阿里)； transition 和 animation 的区别
+23. 什么是 Cookie 隔离，或者说:请求资源的时候不要让它带 cookie 怎么做
+
+24. style 标签写在 body 后与 body 前有什么区别
+
+25. 阐述一下 CSSSprites
+
+26. 什么是首选最小宽度
+
+27. 什么是幽灵空白节点
+
+28.  什么是替换元素；替换元素的计算规则
+  
+29. clip 裁剪是什么
+
+30. 什么是层叠上下文；什么是层叠水平；元素的层叠顺序；层叠准则
+
+31. 解释一下回流与重绘
+
+32. 你知道 CSS 中不同属性设置为百分比\x 时对应的计算基准
+
 
 # JS
 
-1. 谈谈对原型链的理解。
-2. js如何实现继承？
-3. js有哪些数据类型？
-4. js有哪些判断类型的方法？
-5. 如何判断一个变量是否数组？
-7. call bind apply的区别？
-8. 防抖节流的概念？实现防抖和节流。
-9. 深拷贝、浅拷贝的区别？如何实现深拷贝和浅拷贝？
-10. 对比 一下var、const、let。
-11. ES next新特性有哪些？
-12. 箭头函数和普通函数区别是什么？
-13. 使用new创建对象的过程是什么样的？
-14. this指向系列问题。
-15. 手写bind方法。
-16. 谈谈对闭包的理解？什么是闭包？闭包有哪些应用场景？闭包有什么缺点？如何避免闭包？
-17. 谈谈对js事件循环的理解？
-18. 谈谈对promise理解？
-19. 手写 Promise
-20. 实现 Promise.all方法。
-21. Typescript中type和interface的区别是什么？
-22. 讲讲Typescript中的泛型？
-23. Typescript如何实现一个函数的重载？
-24. CmmonJS和ESM区别？
-25. 柯里化是什么？有什么用？怎么实现？
-26. 讲讲js垃圾回收机制。
-27. 实现一个发布订阅。
-28. 如何实现数组怕平？
-29. 如何实现数组去重？
-31. "For 循环"
-32. "闭包"
-33. "原型链"
-35. "new关键字"
-36. "ES6 新语法/特性"
-37. "继承"
-38. "高阶函数"
-39. "EventLoop"
-40. "宏任务与微任务"
-41. "Callback"
-42. "Promise"
-43. "数组去重"
-44. "for each和map的区别"
-45. "es6新增symbol 数据类型"
-46. "Js的基础类型，typeof和instance of的区别"
-47. "数组的for Each和map方法有哪些区别？常用哪些方法去对数组进行增、删、改"
-48. "闭包和作用域"
-49. "实现一个类似关键字new功能的函数"
-50. "如何实现继承（原型和原型链）"
-51. "箭头函数和普通函数有什么区别"
-52. "迭代器(iterator)接口和生成器(generator)函数的关系"
-53. "type和interface的区别"
-54. "any、unknown、never"
-55. "DOM事件流及事件委托机制"
-56. "BOM 和 DOM 的区别"
-57. "什么是 Ajax"
-58. 解构赋值 const { a = 2 } = { a: null } const { a = 2 } = { a: undefined } 上面两个 a 的值是什么
-59. 怎么优化 const value = a && a.b && a.b.c
-60. JS 类型检测的方法 typeof instanceOf Object.prototype.toString() 需要理解各个检查方法的输出
-61. JS 模块化方案 立即执行函数 CommonJS AMD、CMD、UMD ES6 Module
-62. 深入浅出JSBridge：从原理到使用
-63. 介绍JS的基本数据类型
-64. 介绍JS有哪些内置对象
-65. 宿主对象和原生对象的区别
-69. null、undefined及未声明变量之间的区别。如何区分？
-70. ==和===的区别
-71. JS隐式转换及应用场景
-72. "Attribute"和"Property"的区别
-73. NaN是什么？如何判断是否是NaN类型
-74. 如何判断两个对象相等
-75. 什么是'user strict'，使用它有什么优缺点？
-76. call,apply和bind的作用是什么？两者区别是什么？
-77. 请说明Function.prototype.bind的用法
-78. 如何判断是否为空数组
-79. 数组方法 push、pop、shift、unshift功能及返回值 .
-80. forEach和.map()循环的主要区别，使用场景举例
-81. JS执行对象查找时，永远不会去查找原型的函数是哪个？
-82. 如何将arguments转为数组 对象的遍历方法
-83. 数组的遍历方法
-84. 匿名函数的典型应用场景
-85. IIFE(立即执行函数)的用法
-86. document的load事件和DOMContentLoaded事件之间的区别
-87. 数据类型判断方式有几种
-88. DOM操作(增删改查) 异
-89. 步加载JS 的方式有哪些
-90. document.write和innerHTML有何区别
-91. jQuery.extend和jQuery.fn.extend的区别
-92. 针对jQuery性能的优化方法
-93. 如何判断当前脚本运行在浏览器还是node环境中
-94. Canvas和SVG的比较
-95. JS事件委托、事件冒泡
-96. IE和Firefox的事件机制有何区别，如何阻止冒泡？
-97. JS内存空间的管理
-98. JS执行上下文
-99. JS变量对象详解
-100. 请解释变量提升
-101. JS作用域及作用域链/闭包（closure），常用场景举例说明
-102. 请简述JS中的this J
-103. S函数与函数式编程
-104. JS原型，原型链。实现继承的方式
-105. JS有哪几种创建对象的方式 请解释事件循环，调用堆栈和任务队列的区别
-106. 谈谈对Promise的理解
-107. ES6知识点
-108. 防抖与节流
-109. 模块化
-110. oAuth实现方案
-111. 如何实现单点登录(Single Sign On)
-112. 请解释SPA(单页应用)，优缺点是什么？如何使其对SEO友好
-113. 前端性能优化方案
-114. 正则表达式
-115. 设计模式举例(实现、应用、优缺点)
-116. 前端常用框架对比
-117. JS编码规范
-118. "数据类型"
-119. "For 循环"
-120. "闭包" "原型链"
-121. "call、apply、bind"
-122. "new关键字"
-123. "ES6 新语法/特性"
-124. "继承"
-125. "高阶函数"
-126. "EventLoop"
-127. "宏任务与微任务"
-128. "Callback" 
-129. "Promise"
+1. js有哪些数据类型；数据类型判断方式有几种；解释一下es6新增symbol数据类型；typeof和instance of的区别；js有哪些判断类型的方法；JS 类型检测的方法 typeof、instanceOf 、Object.prototype.toString() 需要理解各个检查方法的输出；instanceof 运算符的实现原理及实现；typeof 和 instanceof 区别；NaN是什么，如何判断是否是NaN类型；null、undefined及未声明变量之间的区别，如何区分；null和undefined区别；map和Object的区别map和weakMap的区别；介绍 js 的基本数据类型；JavaScript 有几种类型的值?你能画一下他们的内存图吗；什么是堆?什么是栈?它们之间有什么区别和联系；undefined 与 undeclared 的区别；null 和 undefined 的区别；如何获取安全的 undefined 值；在 js 中不同进制数字的表示方式； js 中整数的安全范围是多少；typeof NaN 的结果是什么；isNaN 和 Number.isNaN 函数的区别；Array 构造函数只有一个参数值时的表现；其他值到字符串的转换规则；其他值到数字值的转换规则；其他值到布尔类型的值的转换规则；{} 和 [] 的 valueOf 和 toString 的结果是什么；substring和substr的区别；解析字符串中的数字和将字符串强制类型转换为数字的返回结果都是数字,它们之间的区别是什么；操作符什么时候用于字符串的拼接；什么情况下会发生布尔值的隐式强制类型转换；|| 和 操作符的返回值；Symbol 值的强制类型转换；== 操作符的强制类型转换规则；如何将字符串转化为数字,例如 '12.3'；如何将浮点数点左边的数每三位添加一个逗号,如 12000000.11 转化为『12,000,000.11』；如何判断一个对象是否属于某个类；instanceof 的作用;Symbol 类型的注意点; Object.is() 与原来的比较操作符 “===”、“==” 的区别;Set 和 WeakSet 结构；Map 和 WeakMap 结构；如何封装一个 javascript 的类型判断函数;如何判断一个对象是否为空对象
 
-**JavaScript基础：**
+   
 
-1. "数据类型"
-2. "For 循环"
-3. "闭包"
-4. "原型链"
-5. "call、apply、bind"
-6. "new关键字"
-7. "JS的基础类型，typeof和instanceof的区别"
-8. "==和==="的区别
-9. "JS隐式转换及应用场景"
-10. "NaN是什么？如何判断是否是NaN类型"
-11. "如何判断两个对象相等"
-12. "null、undefined及未声明变量之间的区别。如何区分？"
+2. JS 模块化方案；CommonJS；CmmonJS和ESM区别；AMD、CMD、UMD；ES6 module是编译时导出接口，CommonJS是运行时导出对象。ES6 module输出的值的引用，CommonJS输出的是一个值的拷贝。ES6 module语法是静态的，CommonJS语法是动态的。ES6 module导入模块的是只读的引用，CommonJS导入的是可变的，是一个普通的变量。ES6 module支持异步，CommonJS不支持异步；模块化开发怎么做； js 的几种模块规范；AMD 和 CMD 规范的区别；ES6 模块与 CommonJS 模块、AMD、CMD 的差异；requireJS 的核心原理是什么?(如何动态加载的?如何避免多次加载的?如何缓存的?)；JS 模块加载器的轮子怎么造,也就是如何实现一个模块加载器；require 模块引入的查找方式
 
-**ES6和函数式编程：**
+3. 谈谈对原型链的理解；js如何实现继承（原型和原型链）；JS原型，原型链；实现继承的方式；实现寄生组合继承；JavaScript 原型,原型链? 有什么特点；js 获取原型的方法；Javascript 的作用域链；谈谈对闭包的理解，什么是闭包；闭包有哪些应用场景；闭包有什么缺点；如何避免闭包；闭包和作用域谈一下区别；JS作用域及作用域链/闭包（closure），常用场景举例说明；闭包和原型链谈一下区别；对作用域、作用域链的理解；对闭包的理解以及它的使用场景； JavaScript 继承的几种实现方式；寄生式组合继承的实现;什么是闭包,为什么要用它;使用闭包实现每隔一秒打印 1,2,3,4
 
-1. "ES6 新语法/特性"
-2. "高阶函数"
-3. "箭头函数和普通函数有什么区别"
-4. "迭代器(iterator)接口和生成器(generator)函数的关系"
-5. "Promise"
-6. "防抖与节流"
+4. 如何判断一个变量是否数组；判断数组的方式有哪些；如何实现数组拍平；如何实现数组去重；数组的遍历方法；数组的for Each和map方法有哪些区别；常用哪些方法去对数组进行增、删、改；如何判断是否为空数组；数组方法 push、pop、shift、unshift功能及返回值 ；对类数组对象的理解，如何转化为数组；数组有哪些原生方法；JavaScript 类数组对象的定义；数组和对象有哪些原生方法,列举一下；数组的 fill 方法；[,,,] 的长度；生成随机数的各种方法；如何实现数组的随机排序
 
-**事件和DOM：**
+5. 谈谈对js事件循环的理解；EventLoop；DOM事件流及事件委托机制；JS事件委托、事件冒泡；document的load事件和DOMContentLoaded事件之间的区别；请解释事件循环，调用堆栈和任务队列的区别；宏任务与微任务；IE和Firefox的事件机制有何区别，如何阻止冒泡；写一个通用的事件侦听器函数;事件是什么?IE 与火狐的事件机制有什么区别? 如何阻止冒泡;三种事件模型是什么;事件委托是什么；什么是 DOM 和 BOM；js 的事件循环是什么
 
-1. "DOM事件流及事件委托机制"
-2. "BOM 和 DOM 的区别"
-3. "事件循环，调用堆栈和任务队列的区别"
-4. "IE和Firefox的事件机制有何区别，如何阻止冒泡？"
+6. 介绍JS有哪些内置对象；宿主对象和原生对象的区别；如何将arguments转为数组，对象的遍历方法；如何判断两个对象相等；为什么0.1+0.2 != 0.3，如何让其相等；==和===的区别；JS执行对象查找时，永远不会去查找原型的函数是哪个；JS有哪几种创建对象的方式；介绍 js 有哪些内置对象；内部属性 [[Class]] 是什么；Javascript 中,有一个函数,执行时对象查找时,永远不会去查找原型,这个函数是什么；
 
-**作用域和闭包：**
+7. 说说你对Promise的理解；Promise方法；promise.all 和 promise.allsettled 区别；对async/await 的理解；async/await对比Promise的优势；谈谈对promise理解，手写 Promise和 Promise.all方法；Callback；什么是 Promise 对象,什么是 Promises/A 规范；手写一个 Promise
 
-1. "作用域及作用域链/闭包（closure），常用场景举例"
-2. "请简述JS中的this"
+8. 什么是 Ajax；对AJAX的理解，实现一个AJAX请求；ajax、axios、fetch的区别；异步加载JS 的方式有哪些；js 延迟加载的方式有哪些；Ajax 是什么? 如何创建一个 Ajax；谈一谈浏览器的缓存机制；Ajax 解决浏览器缓存问题；同步和异步的区别;异步加载；异步编程的实现方式
 
-**对象和继承：**
+9. for...in和for...of的区别；For 循环，for each和map的区别；forEach和.map()循环的主要区别，使用场景举例；如何使用for...of遍历对象；forEach和map方法有什么区别；["1 ", "2 ", "3 "].map(parseInt) 答案是多少;js for 循环注意点
 
-1. "实现一个类似关键字new功能的函数"
-2. "如何实现继承（原型和原型链）"
-3. "JS原型，原型链。实现继承的方式"
-4. "JS有哪几种创建对象的方式"
+10. javascript 创建对象的几种方式；使用new创建对象的过程是什么样的；new关键字；实现一个类似关键字new功能的函数；new操作符的实现原理；new 操作符具体干了什么呢?如何实现
 
-**异步编程：**
+11. this指向系列问题；解释一下JS执行上下文；请简述JS中的this ；解释一下JS变量和对象;谈谈 This 对象的理解;箭头函数和普通函数区别是什么；箭头函数和普通函数有什么区别
 
-1. "EventLoop"
-2. "宏任务与微任务"
-3. "Callback"
-4. "谈谈对Promise的理解"
+12. document.write和innerHTML有何区别；documen.write 和 innerHTML 的区别；DOM 操作——怎样添加、移除、移动、复制、创建和查找节点；innerHTML 与 outerHTML 的区别；
+
+13. call bind apply的区别；call,apply和bind的作用是什么；手写bind方法；请说明Function.prototype.bind的用法；call() 和 .apply() 的区别；手写 call、apply 及 bind 函数
+
+14. Typescript中type和interface的区别是什么；讲讲Typescript中的泛型；Typescript如何实现一个函数的重载；type和interface的区别
+
+15. 深拷贝、浅拷贝的区别；如何实现深拷贝和浅拷贝；object.assign和扩展运算法是深拷贝还是浅拷贝，两者区别；js 中的深浅拷贝实现;Object.assign();
+
+16. ES next新特性有哪些；ES6 新语法/特性；ES6 Module；ES6知识点；ECMAScript6 怎么写 class,为什么会出现 class 这种东西
+
+17. 柯里化是什么，有什么用，怎么实现；JS函数与函数式编程；高阶函数；函数柯里化的实现；谈一谈你理解的函数式编程
+
+18. 对比 一下var、const、let；请解释变量提升；JavaScript 中的作用域与变量声明提升； let 和 const 的注意点
+
+19. 什么是user strict，使用它有什么优缺点；javascript 代码中的 "use strict "; 是什么意思 ? 使用它区别是什么
+
+20. 如何判断当前脚本运行在浏览器还是node环境中；如何判断当前脚本运行在浏览器还是 node 环境中?(阿里)
+
+21. 解构赋值 const { a = 2 } = { a: null } const { a = 2 } = { a: undefined } 上面两个 a 的值是什么
+
+22. 什么是尾调用，使用尾调用有什么好处；什么是 rest 参数；什么是尾调用,使用尾调用有什么好处
+
+23. JS隐式转换及应用场景;匿名函数的典型应用场景；Attribute和Property的区别
+
+24. 迭代器(iterator)接口和生成器(generator)函数的关系
+
+25. 正则表达式；常用正则表达式
+
+26. 立即执行函数；IIFE(立即执行函数)的用法；
+
+27. any、unknown、never
+
+28. 怎么优化 const value = a && a.b && a.b.c
+
+29. 深入浅出JSBridge，从原理到使用
+
+30. jQuery.extend和jQuery.fn.extend的区别；针对jQuery性能的优化方法
+
+31. oAuth实现方案；如何实现单点登录(Single Sign On)
+
+32. JS编码规范；说几条写 JavaScript 的基本规范
+
+33. 什么是假值对象
+
+34. ~ 操作符的作用
+
+35. eval 是做什么的
+
+36. 对于 JSON 的了解;开发中常用的几种 Content-Type;手写一个 jsonp
+
+37. [].forEach.call($$("<em>"),function(a){a.style.outline="1px solid #" (~~(Math.random()</em>(1<<24))).toString(16)}) 能解释一下这段代码的意思吗？
+
+38. 需求:实现一个页面操作不会整页刷新的网站,并且能在浏览器前进、后退时正确响应。给出你的技术实现方案
+
+39. 移动端的点击事件的有延迟,时间是多久,为什么会有? 怎么解决这个延时
+
+40. 如何测试前端代码么? 知道 BDD, TDD, Unit Test 么? 知道怎么测试你的前端工程么(mocha, sinon, jasmin, qUnit..)
+
+41. 使用 JS 实现获取文件扩展名
+
+42. escape,encodeURI,encodeURIComponent 有什么区别；Unicode 和 UTF-8 之间的关系
+
+43. 为什么 0.1 0.2 != 0.3?如何解决这个问题
+
+44. 原码、反码和补码的介绍
+
+45. toPrecision 和 toFixed 和 Math.round 的区别;Math.ceil 和 Math.floor
+
+46. Js 动画与 CSS 动画区别及相应实现；什么是 requestAnimationFrame
+
+47. mouseover 和 mouseenter 的区别；js 拖拽功能的实现；
+
+48. 为什么使用 setTimeout 实现 setInterval?怎么模拟
+
+49. Reflect 对象创建目的
+
+50. EventEmitter 实现
+
+51. 一道常被人轻视的前端 JS 面试题
+
+52. 如何确定页面的可用性时间,什么是 Performance API?
+
+53. js 中的命名规则
+
+54. js 语句末尾分号是否可以省略
+
+57. 前端埋点的实现，说说看思路；怎么做 JS 代码 Error 统计
+
+
+
 
 # 浏览器
 
-1. "浏览器的事件循环机制"
-2. "跨域问题"
-3. "浏览器的存储有哪些及它们间的区别"
-4. "说说浏览器渲染页面的过程"
-5. "移动端屏幕适配"
-6. "数据存储"
-7. "浏览器缓存"
-8. "异步加载"
-9. "前端路由"
-10. "垃圾回收机制"
-11. 本地存储方式 cookie sessionStorage localStorage indexedDB 各个存储方式的特点，以及使用场景。
-12. 如何判断一个元素是否在可视区域中？ offsetTop、scrollTop getBoundingClientRect Intersection Observer
-13. 谈谈 HTTP 缓存 主要问 HTTP 缓存相关的知识，要了解浏览器请求什么时候会返回 disk cache、304、200。
-14. 浏览器架构
-15. 浏览器下事件循环(Event Loop)
-16. 浏览器解析流程
-17. 从输入 url 到展示的过程
-18. 功能检测、功能推断、navigator.userAgent的区别
-19. 浏览器版本检测方式
-20. JS同源策略(same-origin policy)
-21. 跨标签页通讯
-22. 跨域的解决方案
-23. 浏览器数据本地存储方法（localStroage、sessionStroage、cookie、indexedDB）
-24. Web安全举例
-25. 状态码
-26. Web Worker
-27. 内存泄露
-28. HTTP缓存机制
-29. cookie和session的区别
-30. 常见兼容性问题(移动端/PC端)
-31. polyfill的作用
-32. chrome的v8引擎属于渲染引擎么，举例说一下渲染引擎有哪些
-33. "什么是 Ajax"
-34. "移动端屏幕适配"
-35. "数据存储"
-36. "浏览器缓存"
-37. "异步加载"
-38. "前端路由" "
-39. 垃圾回收机制"
-40. "HTTP 1.0/1.1/2.0/3.0 的特性"
-41. "HTTPS"
-42. "WebSocket"
-43. "GET 和 POST 区别"
-44. "网络安全"
-45. "TCP 三次握手四次挥手的理解"
-46. "域名发散与域名收敛"
-47. "输入 URL 回车后经过哪些过程"
-48. "HTTP 1.0/1.1/2.0/3.0 的特性"
-49. "HTTPS"
-50. "WebSocket"
-51. "GET 和 POST 区别"
-52. "网络安全"
-53. "TCP 三次握手四次挥手的理解"
-54. "域名发散与域名收敛"
-55. 跨域问题"
-56. "token可以放在cookie里吗？"
-57. "前端埋点的实现，说说看思路"
+1. 事件流；浏览器的事件循环机制；浏览器下事件循环(Event Loop)；对浏览器事件循环的理解；Node.js的事件循环；Node和浏览器事件循环机制的区别；事件冒泡和捕获的区别；如何阻止事件冒泡；对事件委托的理解；执行顺序；process.nextTick；setImmediate 和 setTimeout;js 中倒计时的纠偏实现
 
-**浏览器基础：**
+   
 
-1. "浏览器的事件循环机制"
-2. "说说浏览器渲染页面的过程"
-3. "浏览器解析流程"
-4. "从输入 URL 到展示的过程"
-5. "浏览器版本检测方式"
-6. "浏览器架构"
-7. "浏览器下事件循环(Event Loop)"
+2. 浏览器架构；说说浏览器渲染页面的过程；浏览器解析流程；从输入 url 到展示的过程；输入 URL 回车后经过哪些过程；当在浏览器中输入 URL 并且按下回车之后发生了什么；DNS完整的查询过程；浏览器架构；你对浏览器的理解；介绍一下你对浏览器内核的理解；常见的浏览器内核比较； 常见浏览器所用内核；浏览器的渲染原理；渲染过程中遇到 JS 文件怎么处理?(浏览器解析过程)；什么是文档的预解析?(浏览器解析过程)；CSS 如何阻塞文档解析?(浏览器解析过程)；渲染页面时常见哪些不良现象?(浏览器渲染过程)；如何优化关键渲染路径?(浏览器渲染过程)； 什么是重绘和回流?(浏览器绘制过程)；如何减少回流?(浏览器绘制过程)；为什么操作 DOM 慢?(浏览器绘制过程)；主流浏览器内核私有属性 css 前缀；浏览器的渲染过程；浏览器渲染优化；chrome的v8引擎属于渲染引擎么，举例说一下渲染引擎有哪些;把 script 标签放在页面的最底部的 body 封闭之前和封闭之后有什么区别?浏览器会如何解析它们
 
-**跨域和网络请求：**
+3. 垃圾回收机制；内存泄露；浏览器的垃圾回收机制；新生代（副垃圾回收器）；老生代（主垃圾回收器）；引用计数法；哪些情况会导致内存泄漏；Web Worker；讲讲js垃圾回收机制；JS内存空间的管理；如何编写高性能的 Javascript；简单介绍一下 V8 引擎的垃圾回收机制；哪些操作会造成内存泄漏；
 
-1. "跨域问题"
-2. "跨域的解决方案"
-3. "什么是 Ajax"
-4. "状态码"
+4. 浏览器是怎么对 HTML5 的离线储存资源进行管理和加载的呢；常见的浏览器端的存储技术有哪些；数据存储；浏览器缓存浏览器的存储有哪些及它们间的区别；cookie和session的区别；本地存储方式 cookie、sessionStorage、localStorage 、indexedDB 各个存储方式的特点，以及使用场景；请描述一下 cookies,sessionStorage 和 localStorage 的区别；
 
-**存储和缓存：**
+5. 如何判断一个元素是否在可视区域中？ offsetTop、scrollTop getBoundingClientRect Intersection Observer
 
-1. "浏览器的存储有哪些及它们间的区别"
-2. "数据存储"
-3. "浏览器缓存"
-4. "HTTP 缓存"
-5. "浏览器数据本地存储方法（localStorage、sessionStorage、cookie、indexedDB）"
+6. HTTP状态码；谈谈 HTTP 缓存 ；HTTP 缓存相关的知识，要了解浏览器请求什么时候会返回 disk cache、304、200；TCP 三次握手四次挥手的理解；HTTP 1.1 和 HTTP 2.0 的区别；HTTP 1.0/1.1/2.0/3.0 的特性；HTTP和HTTPS协议的区别；对HTTP请求中的keep-alive有了解吗；HTTP队头堵塞，TCP队头阻塞； get 请求传参长度的误区；URL 和 URI 的区别；get 和 post 请求在缓存方面的区别
 
-**移动端适配：**
+7. OSI七层模型；TCP/IP五层协议；TCP和UDP的区别；UDP协议为什么不可靠；对 WebSocket 的理解；TCP和UDP的应用；GET和POST的请求的区别；POST和PUT请求的区别；
 
-1. "移动端屏幕适配"
+8. 网络安全；Web安全举例；HTTPS；WebSocket；token可以放在cookie里吗；什么是HTTPS协议，如何加密的；TLS/SSL的工作原理；XSS（跨站脚本攻击）；CSRF（跨站请求伪造）；什么是 XSS 攻击?如何防范 XSS 攻击；什么是 CSP；什么是 CSRF 攻击?如何防范 CSRF 攻击；什么是 Samesite Cookie 属性；什么是点击劫持?如何防范点击劫持；SQL 注入攻击；
 
-**前端路由和异步加载：**
+9. 什么进程和线程，有什么区别；浏览器有哪些进程;进程间通信的方式
 
-1. "前端路由"
-2. "异步加载"
+10. 为什么需要浏览器缓存；协商缓存和强缓存的区别
 
-**HTTP 协议：**
+11. 常见浏览器所用内核；polyfill的作用；常见兼容性问题(移动端/PC端)；移动端屏幕适配；浏览器版本检测方式；功能检测、功能推断、navigator.userAgent的区别；webSocket 如何兼容低版本浏览器； 检测浏览器版本版本有哪些方式；什么是 Polyfill 
 
-1. "HTTP 1.0/1.1/2.0/3.0 的特性"
-
-**网络安全和协议安全：**
-
-1. "HTTPS"
-2. "网络安全"
-3. "token 可以放在 cookie 里吗？"
-
-**网络通信：**
-
-1. "WebSocket"
-2. "TCP 三次握手四次挥手的理解"
-3. "跨域问题"
-
-**URL 和域名：**
-
-1. "输入 URL 回车后经过哪些过程"
-2. "域名发散与域名收敛"
-
-**前端埋点：**
-
-1. "前端埋点的实现，说说看思路"
-
-**Web安全和兼容性：**
-
-1. "JS 同源策略 (same-origin policy)"
-2. "Web 安全举例"
-3. "常见兼容性问题(移动端/PC端)"
-4. "polyfill 的作用"
-
-**Web Workers 和内存管理：**
-
-1. "Web Worker"
-2. "内存泄露"
-3. "垃圾回收机制"
+12. 跨标签页通讯；域名发散与域名收敛；什么是同源策略；如何解决跨越问题； 如何实现浏览器内多个标签页之间的通信；什么是浏览器的同源政策；如何解决跨域问题；服务器代理转发时,该如何处理 cookie；简单谈一下 cookie ；
 
 # Vue 相关
 
-1. "v-model原理"
-2. "vue响应式原理"
-3. "计算属性和监听属性"
-4. "路由的钩子"
-5. "vue中的data 为什么是个函数？"
-6. "Token怎么存"
-7. "前端有几种缓存方式？"
-8. "数据请求方面"
-9. "router和route的区别"
-10. "路由传参和取参"
-11. "路由钩子beforeEach三个参数"
-12. "vue等待视图完成更新后进行下一次操作后，这个函数叫什么"
-13. "组件通信"
-14. "数据双向绑定原理"
-15. "diff 算法"
-16. "Virtual Dom（虚拟DOM）"
-17. "实战技巧"
-18. "vue3的变化（改进）"
-19. "关于vue3双向绑定的实现"
-20. "vue3中的ref、toRef、toRefs"
-21. "computed和watch的区别"
-22. "vue-router的路由守卫"
-23. "composition Api对比 option Api的优势"
-24. " vue computed和watch的区别"
-25. " v-if和v-show的区别"
-26. " vue常用指令"
-27. "vue父子组件挂载顺序？"
-28. "v-model的作用"
-29. "v-for和v-if放在一起用好吗"
-30. "vue组件样式污染"
-31. "Vue如何给一个对象添加新的属性"
-32. "vue的keep-alive组件"
-33. "process.nextTick和Vue.nextTick"
-34. "vue组件watch中deep和immediate的作用"
-35. "slot"
-36. "vue如何实现自定义指令"
-37. "Vue.use方法的使用"
-38. "vue和react的区别"
-39. "vue父子组件通信，兄弟组件通信"
-40. "vue的eventbus的实现"
-41. "React、Vue和JQuery的选型"
-42. " vue和jquery的区别"
-43. "computed和watch的区别"
-44. "computed和method的区别"
-45. "vue组件的生命周期"
-46. " vue组件data为什么是函数"
-47. "vue组件data用箭头函数行不行？"
-48. "vue响应式原理"
-49. " vue的compile过程"
-50. "vue的computed和watch的实现原理"
-51. "vue的模板渲染"
-52. "vue数据双向绑定原理"
-53. " vue怎么检测到数组的变化"
-54. "Vue的diff算法"
-55. "vue nextTick"
-56. "Vue的数据为什么频繁变化但只会更新一次"
-57. "vue异步渲染、nextTick"
-58. "为什么Vue是渐进式框架"
-59. "vue框架原理"
-60. "vue-router中的路由守卫有哪些"
-61. "vue-router原理以及两种模式区别"
-62. "vue-router用法"
-63. "Vue3和Vue2的区别"
-64. "vuex的使用"
-65. "Vuex工作机制"
-66. vue2中响应式变量如何变成非响应式
-67. vue2中keep-alive怎么实现缓存效果的，它的原理是什么
-68. vue2中虚拟DOM更新时标记差异怎么实现的，介绍一下它的原理
-69. "组件通信"
-70. "数据双向绑定原理"
-71. "diff 算法"
-72. "Virtual Dom（虚拟DOM）"
-73. 讲讲Vuex的使用方法。
-74. 讲讲Vue双向绑定原理。
-75. mvvm和mvc区别是什么？
-76. Vue组件间通信方式有哪些？
-77. computed和watch区别是什么？
-78. v-for和v-if同时使用有问题吗？
-79. 讲讲前端路由原理。比较一下history和hash这两种路由。
-80. 讲讲Vue的虚拟DOM，原理，好处是什么？相对于手动操作DOM，性能更好吗？
-81. 说说Vue的keep-alive使用及原理。
-82. Vue父子组件生命周期触发顺序是怎样的？
-83. Vue.nextTick的实现？
-84. 讲讲Vue diff算法。
+1. 路由的钩子；vue-router的路由守卫；router和route的区别；路由传参和取参；路由钩子beforeEach三个参数；vue-router中的路由守卫有哪些；vue-router原理以及两种模式区别；vue-router用法；讲讲前端路由原理，比较一下history和hash这两种路由；前端有几种缓存方式；路由的hash和history模式的区别；router和route的区别；如何设置动态路由；路由守卫；vue-router 中的导航钩子函数；$route 和 $router 的区别；前端路由；什么是“前端路由”?什么时候适合使用“前端路由”?“前端路由”有哪些优点和缺点；Vue的路由实现:hash模式 和 history模式；Vue路由的钩子函数
 
-**Vue.js 基础：**
+   
 
-1. "v-model 原理"
-2. "vue 响应式原理"
-3. "计算属性和监听属性"
-4. "路由的钩子"
-5. "vue 中的 data 为什么是个函数？"
-6. "Token 怎么存"
-7. "前端有几种缓存方式？"
-8. "数据请求方面"
-9. "router 和 route 的区别"
-10. "路由传参和取参"
-11. "路由钩子 beforeEach 三个参数"
-12. "vue 等待视图完成更新后进行下一次操作后，这个函数叫什么"
-13. "组件通信"
-14. "数据双向绑定原理"
-15. "diff 算法"
-16. "Virtual Dom（虚拟 DOM）"
+2. Virtual Dom（虚拟DOM）；diff 算法；Vue的diff算法；Vue的数据为什么频繁变化但只会更新一次；讲讲Vue的虚拟DOM原理以及好处是什么，相对于手动操作DOM性能更好吗；讲讲Vue diff算法；vue2中虚拟DOM更新时标记差异怎么实现的，介绍一下它的原理；对虚拟DOM的理解；虚拟DOM就一定比真实DOM更快吗；虚拟DOM的解析过程；DIFF算法原理；什么是 Virtual DOM?为什么 Virtual DOM 比原生 DOM 快；如何比较两个 DOM 树的差异
 
-**Vue.js 进阶：**
+3. 常见的事件修饰符及其作用；常用的属性、指令有哪些；vue常用指令；v-for和v-if放在一起用好吗； v-if和v-show的区别；v-for和v-if同时使用有问题吗；vue如何实现自定义指令；v-html 的原理；v-model 是如何实现的，语法糖实际是什么；为什么v-for和v-if不能一起使用；vue 常用的修饰符；
 
-1. "vue3 的变化（改进）"
-2. "关于 vue3 双向绑定的实现"
-3. "vue3 中的 ref、toRef、toRefs"
-4. "computed 和 watch 的区别"
-5. "vue-router 的路由守卫"
-6. "composition API 对比 option API 的优势"
+4. vue响应式原理；vue响应式原理；vue的模板渲染；vue的compile过程；vue框架原理；为什么Vue是渐进式框架；Vuex工作机制；vue3中的ref、toRef、toRefs；Object.defineProperty 介绍；使用 Object.defineProperty() 来进行数据劫持有什么缺点；什么是 Proxy
 
-**Vue.js 实际应用：**
+5. 计算属性和监听属性；computed和watch的区别；vue组件watch中deep和immediate的作用；computed和method的区别；vue的computed和watch的实现原理；computed和watch区别是什么；vuex的使用；computed 和 watch 的差异；computed 和 watch 区别
 
-1. "Vue2 中响应式变量如何变成非响应式"
-2. "Vue2 中 keep-alive 怎么实现缓存效果的，它的原理是什么"
-3. "Vue2 中虚拟 DOM 更新时标记差异怎么实现的，介绍一下它的原理"
+6. v-model原理；数据双向绑定原理；关于vue3双向绑定的实现；v-model的作用；vue数据双向绑定原理；讲讲Vue双向绑定原理；vue 双向数据绑定原理；Vue实现数据双向绑定的原理
+
+7. Vue生命周期；vue组件的生命周期；vue父子组件挂载顺序；Vue父子组件生命周期触发顺序是怎样的；Vue 的生命周期是什么；Vue 的各个生命阶段是什么；Vue的生命周期
+
+8. vue的keep-alive组件；vue2中keep-alive怎么实现缓存效果的，它的原理是什么；说说Vue的keep-alive使用及原理；keep-alive 组件有什么作用；对keep-alive 的了解
+
+9. 前端常用框架对比；React、Vue和JQuery的选型；vue和jquery的区别；vue和react的区别；vue和react的区别，有什么相同；Vue与Angular以及React的区别
+
+10. 讲讲Vuex的使用方法；Vuex 的原理；Vuex中action和mutation的区别；Vuex 和 localStorage 的区别；Vuex是什么?怎么使用?哪种功能场景使用它
+
+11. 组件通信；vue父子组件通信，兄弟组件通信；vue的eventbus的实现；Vue组件间通信方式有哪些；Vue 组件间的参数传递方式；Vue组件间的参数传递
+
+12. vue等待视图完成更新后进行下一次操作后，这个函数叫什么；process.nextTick和Vue.nextTick；vue异步渲染、nextTick；Vue.nextTick的实现
+
+13. 实战技巧；vue怎么检测到数组的变化；vue2中响应式变量如何变成非响应式；vue组件样式污染；Vue如何给一个对象添加新的属性
+
+14. vue中的data 为什么是个函数；vue组件data为什么是函数；vue组件data用箭头函数行不行；data为什么是一个函数而不是对象
+
+15. 什么是 MVVM?比之 MVC 有什么区别?什么又是 MVP ；mvvm和mvc区别是什么；MVVM的理解；对于MVVM的理解
+
+16. SPA的理解，有什么优缺点；SPA和多页面有什么区别；请解释SPA(单页应用)，优缺点是什么？如何使其对SEO友好
+
+17. vue3的变化（改进）；composition Api对比 option Api的优势；Vue3和Vue2的区别；Vue2和Vue3有哪些区别
+
+18. Vue中key的作用；为什么不建议用index作为key；vue 中 key 值的作用
+
+19. Vue-cli如何新增自定义指令；Vue如何自定义一个过滤器
+
+20. mixin 和 mixins 区别；vue 中 mixin 和 mixins 区别
+
+21. 数据请求方面；Token怎么存
+
+22. Vue.use方法的使用
+
+23. Vue的性能优化有哪些
+    - 编码阶段
+    - 打包优化
+    - 用户体验
+    - SEO优化
+
+24. slot
 
 # webpack
 
-1. "有哪些常见的Loader？你用过哪些Loader？"
-2. "有哪些常见的Plugin？你用过哪些Plugin？"
-3. "那你再说一说Loader和Plugin的区别？"
-4. "Webpack构建流程简单说一下"
-5. "使用webpack开发时，你用过哪些可以提高效率的插件？"
-6. "source map是什么？生产环境怎么用？"
-7. "模块打包原理知道吗？"
-8. "文件监听原理呢？"
-9. "说一下 Webpack 的热更新原理吧"
-10. "如何对bundle体积进行监控和分析？"
-11. "文件指纹是什么？怎么用？"
-12. "在实际工程中，配置文件上百行乃是常事，如何保证各个loader按照预想方式工作？"
-13. "如何优化 Webpack 的构建速度？"
-14. "是否写过Loader？简单描述一下编写loader的思路？"
-15. "是否写过Plugin？简单描述一下编写Plugin的思路？"
-16. "聊一聊Babel原理吧"
-17. "对webpack的理解"
-18. "webpack中plugin和loader分别做什么？它们之间的执行顺序？"
-19. "webpack常见的优化方案"
-20. "关于babel的理解"
-21. "vite和webpack的区别"
-22. Webpack 常使用的 Loader 和 Plugin
+1. 对webpack的理解；webpack的构建流程；Webpack构建流程简单说一下；模块打包原理知道吗；文件监听原理呢；文件指纹是什么，怎么用；说一下 Webpack 的热更新原理吧；vite和webpack的区别；谈谈你对 webpack 的看法
 
-**Webpack 基础：**
+   
 
-1. "有哪些常见的 Loader？你用过哪些 Loader？"
-2. "有哪些常见的 Plugin？你用过哪些 Plugin？"
-3. "那你再说一说 Loader 和 Plugin 的区别？"
-4. "Webpack 构建流程简单说一下"
-5. "文件监听原理呢？"
+2. webpack常见的优化方案；如何优化 Webpack 的构建速度；在实际工程中，配置文件上百行乃是常事，如何保证各个loader按照预想方式工作；Webpack的Tree Shaking原理；如何提高webpack的打包速度；vite比webpack快在哪里
 
-**Webpack 插件和优化：**
+3. 那你再说一说Loader和Plugin的区别，webpack中plugin和loader分别做什么，它们之间的执行顺序是怎样的；Webpack 常使用的 Loader 和 Plugin
 
-1. "使用 Webpack 开发时，你用过哪些可以提高效率的插件？"
-2. "source map 是什么？生产环境怎么用？"
-3. "模块打包原理知道吗？"
-4. "说一下 Webpack 的热更新原理吧"
-5. "如何对 bundle 体积进行监控和分析？"
-6. "文件指纹是什么？怎么用？"
-7. "在实际工程中，配置文件上百行乃是常事，如何保证各个 Loader 按照预想方式工作？"
-8. "如何优化 Webpack 的构建速度？"
+4. 如何减少打包后的代码体积；如何对bundle体积进行监控和分析；bundle，chunk，module是什么；什么是Code Splitting
 
-**Webpack Loader 和 Babel：**
+5. webpack配置有哪些；使用webpack开发时，你用过哪些可以提高效率的插件；聊一聊Babel原理吧；关于babel的理解
 
-1. "是否写过 Loader？简单描述一下编写 Loader 的思路？"
-2. "是否写过 Plugin？简单描述一下编写 Plugin 的思路？"
-3. "聊一聊 Babel 原理吧"
+6. source map是什么；生产环境怎么用；Webpack的Source Map是什么，如何配置生成Source Map
 
-**Webpack 高级概念和其他：**
+7. 有哪些常见的Loader，你用过哪些Loader，是否写过Loader，简单描述一下编写loader的思路
 
-1. "对 Webpack 的理解"
-2. "Webpack 中 Plugin 和 Loader 分别做什么？它们之间的执行顺序？"
-3. "Webpack 常见的优化方案"
-4. "关于 Babel 的理解"
-5. "vite 和 webpack 的区别"
-6. "Webpack 常使用的 Loader 和 Plugin"
+8. 有哪些常见的Plugin，你用过哪些Plugin，是否写过Plugin，简单描述一下编写Plugin的思路
+
+9. 说一下你对Monorepo的理解；你在项目是怎么做Monorepo；为什么pnpm快
+
+   
 
 # 前端性能优化
 
-**性能优化通用知识点：**
+1. 图片懒加载原理；前端需要注意哪些 SEO；前端性能优化 ；前端性能优化方案；图片的懒加载和预加载；
 
-1. "webpack 性能优化"
+   
 
-**前端性能优化：**
+2. 节流和防抖；谈一下防抖、节流的概念；如何实现防抖和节流；介绍一下 js 的节流与防抖
 
-1. "优化滚动性能"
-2. "优化动画性能"
-3. "图片懒加载"
-4. "长列表优化"
+3. SPA首屏为什么加载慢？
 
-# 常见设计模式
+4. 为什么要做性能优化
 
-"设计模式的最基本原则"
+5. 常见性能优化有哪些关键指标？
 
-使用过哪些设计模式 前端开发中用的比较多的就是策略模式、单例模式、发布订阅、外观模式
+6. 性能优化方式有哪些：HTML & CSS、JS、Vue、Webpack优化、网络优化
 
-# 数据结构和算法
+# 在线笔试题
 
-1. "数组去重"
-2. "常规手写题"
-3. "进阶手写题"
-4. "函数柯里化 currying"
-5. "compose 函数"
-6. "pipe 函数"
-7. "JS 求交并差集"
-8. "独立作用域"
-9. "经典排序题"
-10. "数组去重" 
-11. "函数柯里化 currying" 
-12. "compose 函数" 
-13. "pipe 函数" 
-14. "JS 求交并差集" 
-15. "独立作用域" 
-16. "经典排序题"
-17. 那堆和栈的概念有什么区别呢
+1. js 实现一个函数,完成超过范围的两个大整数相加功能
 
-# 前端架构/设计
+   
 
-1. "类组件的生命周期，函数组件使用哪些hook来代替的哪些生命周期"
-2. "对于Fiber架构理解"
-3. "前端权限设计思路"
-4. "微前端"
-5. "前端低代码的认识"
+2. js 如何实现数组扁平化
+
+3. js 如何实现数组去重
+
+4. 如何求数组的最大值和最小值
+
+5. 如何求两个数的最大公约数
+
+6. 如何求两个数的最小公倍数
+
+7. 实现 IndexOf 方法
+
+8. 判断一个字符串是否为回文字符串
+
+9. 实现一个累加函数的功能比如 sum(1,2,3)(2).valueOf()
+
+10. 使用 reduce 方法实现 forEach、map、filter
+
+11. 设计一个简单的任务队列,要求分别在 1,3,4 秒后打印出 "1 ", "2 ", "3 "
+
+12. 如何查找一篇英文文章中出现频率最高的单词
+
+13. 如何检测浏览器所支持的最小字体大小
+
+14. 一个列表,假设有 100000 个数据,这个该怎么办
+
+    
+
+
+# 其他
+
+1. 类组件的生命周期，函数组件使用哪些hook来代替的哪些生命周期
+
+   
+
+2. 对于Fiber架构理解
+
+3. 前端权限设计思路
+
+4. 微前端
+
+5. 前端低代码的认识
+
+6. 常用的git命令
+
+7. git rebase和git merge的区别
+
+8. 设计模式的最基本原则
+
+9. 使用过哪些设计模式 前端开发中用的比较多的就是策略模式、单例模式、发布订阅、外观模式
+
+10. 那堆和栈的概念有什么区别呢
+
+11. 单例模式模式是什么；策略模式是什么；代理模式是什么；中介者模式是什么；适配器模式是什么；观察者模式和发布订阅模式有什么不同；发布订阅模式的实现；手写一个观察者模式
