--- a/src/views/home/findJob/前端八股文汇总背诵版.md
+++ b/src/views/home/findJob/前端八股文汇总背诵版.md
@@ -1,124 +1,119 @@
 # HTML
 
-1. HTML语义化标签有哪些；对HTML语义化理解；SGML 、 HTML 、XML 和 XHTML 的区别；简述一下你对 HTML 语义化的理解
+1. HTML5新增特性； HTML5 为什么只需要写 `<!DOCTYPE HTML >`，而不需要引入 DTD ；HTML5 元素的分类； HTML5 有哪些新特性、移除了那些元素；如何处理 HTML5 新标签的浏览器兼容问题； HTML5 的 form 的自动完成功能是什么；HTML5 的离线储存怎么使用,工作原理能不能解释一下；HTML5 新增的表单元素有哪些；在 HTML5 中,哪个方法用于获得用户的当前位置；用于预格式化文本的标签是什么
 
-2. HTML5新增特性； HTML5 为什么只需要写 <!DOCTYPE HTML >,而不需要引入 DTD ；HTML5 元素的分类； HTML5 有哪些新特性、移除了那些元素；如何处理 HTML5 新标签的浏览器兼容问题； HTML5 的 form 的自动完成功能是什么；HTML5 的离线储存怎么使用,工作原理能不能解释一下；HTML5 新增的表单元素有哪些；在 HTML5 中,哪个方法用于获得用户的当前位置；用于预格式化文本的标签是
+2. `<link>`标签定义；`<title>`与 `<h1>`的区别；`<img>`的 title 和 alt 有什么区别；常用的 meta 标签；`<head >`标签中必不少的是哪些；`<b> `与 `<strong>` 的区别和 `<i> `与 `<em>` 的区别；`<label> `的作用是什么?是怎么用的；src和href的区别
 
-3. DOCTYPE(⽂档类型) 的作⽤；DOCTYPE 的作用是什么；DTD 介绍；DHTML 是什么；文档的不同注释方式
+3. 标准模式与兼容模式各有什么区别；实现不使用 border 画出 1 px 高的线,在不同浏览器的标准模式与怪异模式下都能保持一致的效果
 
-4. iframe 有那些优点和缺点；iframe 有那些缺点
+4. 行内元素、块级元素、空（void）；行内元素定义；块级元素定义；行内元素与块级元素的区别； 空元素定义
 
-5. Canvas和SVG的区别；Canvas 和 SVG 有什么区别
+5. DOCTYPE(⽂档类型) 的作⽤；DOCTYPE 的作用是什么；DTD 介绍；DHTML 是什么；文档的不同注释方式
 
-6. script标签中defer和async的区别；async 和 defer 的作用是什么?有什么区别?(浏览器解析过程)
+6. 简述一下你对 HTML 语义化的理解；HTML语义化标签有哪些；SGML 、 HTML 、XML 和 XHTML 的区别；
 
-7. 行内元素、块级元素、空（void）；行内元素定义；块级元素定义；行内元素与块级元素的区别； 空元素定义
+7. 对 web 标准、可用性、可访问性的理解；Html 规范中为什么要求引用资源不加协议头http或者https
 
-8. BOM 和 DOM 的区别；DOM操作(增删改查) 异；怎样添加、移除、移动、复制、创建和查找节点
+8. BOM 和 DOM 的区别；解释一下DOM操作(增删改查)及其不同点 ；怎样添加、移除、移动、复制、创建和查找节点；attribute 和 property 的区别是什么；DOMContentLoaded 事件和 Load 事件的区别
 
-9.  标准模式与兼容模式各有什么区别；实现不使用 border 画出 1 px 高的线,在不同浏览器的标准模式与怪异模式下都能保持一致的效果
+9. script标签中defer和async的区别；async 和 defer 的作用是什么?有什么区别?(浏览器解析过程)
 
-10.  link 标签定义； title 与 h1 的区别；<img>的 title 和 alt 有什么区别；常用的 meta 标签；head 标签中必不少的是哪些；b 与 strong 的区别和 i 与 em 的区别； Label 的作用是什么?是怎么用的；src和href的区别
+10. 页面可见性(Page Visibility API) 可以有哪些用途；如何在页面上实现一个圆形的可点击区域
 
-11. 页面导入样式时,使用 link 和 @import 有什么区别；link和@import的区别
+11. 页面导入样式时,使用 `<link>`和 `@import`有什么区别； `<link>`和 `@import`的区别
 
-12.  DOMContentLoaded 事件和 Load 事件的区别
+12. IE 各版本和 Chrome 可以并行下载多少个资源；介绍一下Chrome 中的 Waterfall
 
-14. 页面可见性(Page Visibility API) 可以有哪些用途；如何在页面上实现一个圆形的可点击区域
+13. 扫描二维码登录网页是什么原理，前后两个事件是如何联系的
 
-15. 网页验证码是干嘛的,是为了解决什么安全问题；
+14. Flash、Ajax 各自的优缺点，在使用中如何取舍
 
-16. 渐进增强和优雅降级的定义
+15. 网页验证码是干嘛的，是为了解决什么安全问题
 
-17. attribute 和 property 的区别是什么
+16. css reset 和 normalize.css 有什么区别
 
-18. 对 web 标准、可用性、可访问性的理解；Html 规范中为什么要求引用资源不加协议头http或者https
+17. Canvas 和 SVG 有什么区别
 
-19.  IE 各版本和 Chrome 可以并行下载多少个资源；Chrome 中的 Waterfall
+18. disabled 和 readonly 的区别
 
-20. Flash、Ajax 各自的优缺点,在使用中如何取舍
+19. 渐进增强和优雅降级的定义
+
+20. iframe 有哪些优点和缺点
 
 21. 怎么重构页面
-
-22. css reset 和 normalize.css 有什么区别
-
-23. disabled 和 readonly 的区别
-
-24. 扫描二维码登录网页是什么原理,前后两个事件是如何联系的
 
     
 
 # CSS
 
-1. 讲一下盒模型，普通盒模型和怪异盒模型有什么区别；介绍一下标准的 CSS 的盒子模型?低版本 IE 的盒子模型有什么不同的； 内联盒模型基本概念；如何去除 inline-block 元素间间距；li 与 li 之间有看不见的空白间隔是什么原因引起的?有什么解决办法?
+1. 讲一下盒模型，普通盒模型和怪异盒模型有什么区别；介绍一下标准的 CSS 的盒子模型和低版本 IE 的盒子模型有什么不同的； 内联盒模型基本概念；如何去除 inline-block 元素间间距；li 与 li 之间有看不见的空白间隔是什么原因引起的，有什么解决办法
 
-2. 几种常见的 CSS 布局；讲一下flex弹性盒布局；flex:1; 是哪些属性的缩写，对应的属性代表什么含义；flexbox 布局的属性和使用场景；flex布局理解
+2. 几种常见的 CSS 布局；讲一下flex弹性盒布局；flex:1 是哪些属性的缩写，对应的属性代表什么含义；flexbox 布局的属性和使用场景；flex布局理解
 
-3. BFC、IFC是什么；BFC 块级格式化上下文；对BFC的理解，如何创建BFC；块元素和行内元素区别是什么？常见块元素和行内元素有哪些？；什么是包含块,对于包含块的理解；对 BFC 规范(块级格式化上下文:block formatting context)的理解；IFC 是什么；元素竖向的百分比设定是相对于容器的高度吗
+3. BFC、IFC是什么；BFC 块级格式化上下文；对BFC的理解，如何创建BFC；块元素和行内元素区别是什么，常见块元素和行内元素有哪些；什么是包含块，对于包含块的理解；对 BFC 规范(块级格式化上下文 block formatting context)的理解；IFC 是什么；元素竖向的百分比设定是相对于容器的高度吗
 
-4. 常见的水平垂直居中实现方案；CSS如何实现垂直居中，实现水平垂直居中，实现图片居中；两栏布局；三栏布局；如何居中 div；有一个高度自适应的 div,里面有两个 div,一个高度 100px,希望另一个填满剩下的高度；css 实现上下固定中间自适应布局；css 两栏布局的实现；css 三栏布局的实现
+4. 常见的水平垂直居中实现方案；CSS如何实现垂直居中，实现水平垂直居中，实现图片居中；如何居中 div；有一个高度自适应的 div，里面有两个 div，一个高度 100px，希望另一个填满剩下的高度；css 实现上下固定中间自适应布局；css 两栏布局的实现；css 三栏布局的实现
 
 5. CSS常见的选择器有哪些；CSS选择器和优先级；CSS的优先级如何计算；CSS3新增特性；CSS可继承属性和不可继承属性；CSS 选择符有哪些；CSS 中哪些属性可以继承；CSS 优先级算法如何计算
 
-6. 常见的CSS单位；长度单位px、em和rem的区别是什么；画一条0.5px的线；如何解决1px；画一条 0.5px 的线；使用 rem 布局的优缺点；设备像素、css 像素、设备独立像素、dpr、ppi 之间的区别
+6. 常见的CSS单位；长度单位px、em和rem的区别是什么；画一条0.5px的线；如何解决1px；使用 rem 布局的优缺点；设备像素、css 像素、设备独立像素、dpr、ppi 之间的区别
 
-7. 浮动塌陷问题解决方法是什么；请解释一下为什么需要清除浮动?清除浮动的方式；使用 clear 属性清除浮动的原理；zoom:1 的清除浮动原理
+7. 浮动塌陷问题解决方法是什么；请解释一下为什么需要清除浮动以及清除浮动的方式；使用 clear 属性清除浮动的原理；zoom:1 的清除浮动原理；对于 hasLayout 的理解；layout viewport、visual viewport 和 ideal viewport 的区别；常用 hack 的技巧；
 
-8. position 常用属性；默认值是什么；position属性的值有哪些；各个值是什么含义；position 的值 relative 和 absolute 定位原点是什么； 绝对定位元素与非绝对定位元素的百分比计算的区别；display &#039;、&#039;position &#039;和 &#039;float &#039;的相互关系；absolute 的 containingblock(包含块)计算方式跟正常流有什么不同
+8. position 常用属性及其默认值是什么；position属性的值有哪些，各个值是什么含义；position 的值 relative 和 absolute 定位原点是什么； 绝对定位元素与非绝对定位元素的百分比计算的区别；display 、position 和 float的相互关系；absolute 的 containingblock(包含块)计算方式跟正常流有什么不同
 
-9. dislpay的属性和作用；单行、多行文本溢出；隐藏元素的方法；隐藏元素的方式；display 有哪些值?说明他们的作用；CSS 里的 visibility 属性有个 collapse ；隐藏元素的 background-image 到底加不加载；如何实现单行/多行文本溢出的省略(...)；常见的元素隐藏方式
+9. dislpay的属性和作用；单行、多行文本溢出；隐藏元素的方法；隐藏元素的方式；display 有哪些值，说明他们的作用；解释一下CSS 里的 visibility 属性中 collapse ；隐藏元素的 background-image 到底加不加载；如何实现单行/多行文本溢出的省略(...)；常见的元素隐藏方式有哪些
 
-10. 什么是margin重叠，如何解决；margin 重叠问题的理解；content 与替换元素的关系；margin:auto 的填充规则；margin 无效的情形；border 的特殊性；什么是基线和 x-height；line-height 的特殊性；vertical-align 的特殊性；overflow 的特殊性；无依赖绝对定位是什么；absolute 与 overflow 的关系；relative 的特殊性；margin 和 padding 分别适合什么场景使用；width:auto 和 width:100\x 的区别；为什么 height:100\x 会无效；min-width/max-width 和 min-height/max-height 属性间的覆盖规则
+10. 什么是margin重叠，如何解决；margin 重叠问题的理解；content 与替换元素的关系；margin:auto 的填充规则；margin 无效的情形；border 的特殊性；什么是基线和 x-height；line-height 的特殊性；vertical-align 的特殊性；overflow 的特殊性；无依赖绝对定位是什么；absolute 与 overflow 的关系；relative 的特殊性；margin 和 padding 分别适合什么场景使用；width:auto 和 width:100%的区别；为什么 height:100% 会无效；min-width、max-width 和 min-height、max-height 属性间的覆盖规则
 
-11. 为什么要初始化 CSS 样式；使用 CSS 预处理器吗?喜欢哪个；CSS 优化、提高性能的方法有哪些；浏览器是怎样解析 CSS 选择器的；为什么不建议使用统配符初始化 css 样式；有了使用过Sass、Less 吗，他们的区别是什么；什么是 CSS 预处理器/后处理器
+11. 为什么要初始化 CSS 样式；使用 CSS 预处理器吗，介绍一下有哪些；CSS 优化、提高性能的方法有哪些；浏览器是怎样解析 CSS 选择器的；为什么不建议使用统配符初始化 css 样式；介绍一下Sass、Less 的区别是什么；什么是 CSS 预处理器/后处理器
 
-12. 全屏滚动的原理是什么?用到了 CSS 的哪些属性?(待深入实践)；视差滚动效果,如何给每页做不同的动画?(回到顶部,向下滑动要再次出现,和只出现一次分别怎么做；overflow:scroll 时不能平滑滚动的问题怎么处理；offsetWidth/offsetHeight,clientWidth/clientHeight 与 scrollWidth/scrollHeight 的区别
+12. 全屏滚动的原理是什么，用到了 CSS 的哪些属性待深入实践)；视差滚动效果，如何给每页做不同的动画（回到顶部，向下滑动要再次出现，和只出现一次分别怎么做）；overflow:scroll 不能平滑滚动的问题怎么处理；offsetWidth/offsetHeight,clientWidth/clientHeight 与 scrollWidth/scrollHeight 的区别
 
-13. 经常遇到的浏览器的兼容性有哪些?原因,解决方法是什么,常用 hack 的技巧；移动端的布局用过媒体查询吗；什么是响应式设计?响应式设计的基本原理是什么?如何兼容低版本的 IE?(待深入了解)；position:fixed;在 android 下无效怎么处理
+13. 经常遇到的浏览器的兼容性有哪些，解释一下原因及其解决方法；介绍一下移动端的布局媒体查询；什么是响应式设计，响应式设计的基本原理是什么，如何兼容低版本的 IE(待深入了解)；position:fixed在 android 下无效怎么处理
 
-14. 简单介绍使用图片 base64 编码的优点和缺点；png、jpg、gif 这些图片格式解释一下,分别什么时候用。有没有了解过 webp；浏览器如何判断是否支持 webp 格式图片
+14. 简单介绍使用图片 base64 编码的优点和缺点；png、jpg、gif 、webp这些图片格式解释一下，分别什么时候用；浏览器如何判断是否支持 webp 格式图片
 
-15. 实现一个三角形；用纯 CSS 创建一个三角形的原理是什么；实现一个宽高自适应的正方形；实现一个三角形；一个自适应矩形,水平垂直居中,且宽高比为 2:1；CSS 多列等高如何实现
+15. 实现一个三角形；用纯 CSS 创建一个三角形的原理是什么；实现一个宽高自适应的正方形；一个自适应矩形,水平垂直居中，且宽高比为 2:1；CSS 多列等高如何实现
 
-16.  ::before 和:after 中双冒号和单冒号有什么区别?解释一下这 2 个伪元素的作用；伪类与伪元素的区别；关于伪类 LVHA 的解释；CSS3 新增伪类有那些；伪类和伪元素的区别是什么
-  
-17. 如何修改 chrome 记住密码后自动填充表单的黄色背景；怎么让 Chrome 支持小于 12px 的文字；让页面里的字体变清晰,变细用 CSS 怎么做；font-style 属性中 italic 和 oblique 的区别；font-weight 的特殊性；text-indent 的特殊性； letter-spacing 与字符间距；word-spacing 与单词间距；white-space 与换行和空格的控制；一个满屏品字布局如何设计
+16. ::before 和:after 中双冒号和单冒号有什么区别，解释一下这两个伪元素的作用；伪类与伪元素的区别；关于伪类 LVHA 的解释；CSS3 新增伪类有那些；伪类和伪元素的区别是什么
 
-18. CSS3 有哪些新特性?(根据项目回答)；请解释一下 CSS3 的 Flex box(弹性盒布局模型),以及适用场景；简单说一下 css3 的 all 属性
+17. 如何修改 chrome 记住密码后自动填充表单的黄色背景；怎么让 Chrome 支持小于 12px 的文字；让页面里的字体变清晰，变细用 CSS 怎么做；font-style 属性中 italic 和 oblique 的区别；font-weight 的特殊性；text-indent 的特殊性； letter-spacing 与字符间距；word-spacing 与单词间距；white-space 与换行和空格的控制；一个满屏品字布局如何设计
 
-19. 在网页中应该使用奇数还是偶数的字体?为什么呢?
+18. CSS3 有哪些新特性(根据项目回答)；请解释一下 CSS3 的 Flex box(弹性盒布局模型)以及适用场景；简单说一下 css3 的 all 属性
 
-20. 抽离样式模块怎么写,说出思路,有无实践经验
+19. 在网页中应该使用奇数还是偶数的字体，解释一下
 
-21. 对于 hasLayout 的理解；layout viewport、visual viewport 和 ideal viewport 的区别
+20. 抽离样式模块怎么写
 
-22. 如果需要手动写动画,你认为最小时间间隔是多久,为什么?(阿里)； transition 和 animation 的区别
-23. 什么是 Cookie 隔离，或者说:请求资源的时候不要让它带 cookie 怎么做
+21. 如果需要手动写动画，你认为最小时间间隔是多久，为什么； transition 和 animation 的区别
 
-24. style 标签写在 body 后与 body 前有什么区别
+22. 什么是 Cookie 隔离，请求资源的时候不要让它带 cookie 怎么做
 
-25. 阐述一下 CSSSprites
+23. style 标签写在 body 后与 body 前有什么区别
 
-26. 什么是首选最小宽度
+24. 阐述一下 CSSSprites
 
-27. 什么是幽灵空白节点
+25. 什么是首选最小宽度
 
-28.  什么是替换元素；替换元素的计算规则
-  
-29. clip 裁剪是什么
+26. 什么是幽灵空白节点
 
-30. 什么是层叠上下文；什么是层叠水平；元素的层叠顺序；层叠准则
+27. 什么是替换元素；替换元素的计算规则
 
-31. 解释一下回流与重绘
+28. clip 裁剪是什么
 
-32. 你知道 CSS 中不同属性设置为百分比\x 时对应的计算基准
+29. 什么是层叠上下文；什么是层叠水平；元素的层叠顺序；层叠准则
+
+30. 解释一下回流与重绘
+
+31. 你知道 CSS 中不同属性设置为百分比\x 时对应的计算基准
+
+    
 
 
 # JS
 
 1. js有哪些数据类型；数据类型判断方式有几种；解释一下es6新增symbol数据类型；typeof和instance of的区别；js有哪些判断类型的方法；JS 类型检测的方法 typeof、instanceOf 、Object.prototype.toString() 需要理解各个检查方法的输出；instanceof 运算符的实现原理及实现；typeof 和 instanceof 区别；NaN是什么，如何判断是否是NaN类型；null、undefined及未声明变量之间的区别，如何区分；null和undefined区别；map和Object的区别map和weakMap的区别；介绍 js 的基本数据类型；JavaScript 有几种类型的值?你能画一下他们的内存图吗；什么是堆?什么是栈?它们之间有什么区别和联系；undefined 与 undeclared 的区别；null 和 undefined 的区别；如何获取安全的 undefined 值；在 js 中不同进制数字的表示方式； js 中整数的安全范围是多少；typeof NaN 的结果是什么；isNaN 和 Number.isNaN 函数的区别；Array 构造函数只有一个参数值时的表现；其他值到字符串的转换规则；其他值到数字值的转换规则；其他值到布尔类型的值的转换规则；{} 和 [] 的 valueOf 和 toString 的结果是什么；substring和substr的区别；解析字符串中的数字和将字符串强制类型转换为数字的返回结果都是数字,它们之间的区别是什么；操作符什么时候用于字符串的拼接；什么情况下会发生布尔值的隐式强制类型转换；|| 和 操作符的返回值；Symbol 值的强制类型转换；== 操作符的强制类型转换规则；如何将字符串转化为数字,例如 '12.3'；如何将浮点数点左边的数每三位添加一个逗号,如 12000000.11 转化为『12,000,000.11』；如何判断一个对象是否属于某个类；instanceof 的作用;Symbol 类型的注意点; Object.is() 与原来的比较操作符 “===”、“==” 的区别;Set 和 WeakSet 结构；Map 和 WeakMap 结构；如何封装一个 javascript 的类型判断函数;如何判断一个对象是否为空对象
-
-   
 
 2. JS 模块化方案；CommonJS；CmmonJS和ESM区别；AMD、CMD、UMD；ES6 module是编译时导出接口，CommonJS是运行时导出对象。ES6 module输出的值的引用，CommonJS输出的是一个值的拷贝。ES6 module语法是静态的，CommonJS语法是动态的。ES6 module导入模块的是只读的引用，CommonJS导入的是可变的，是一个普通的变量。ES6 module支持异步，CommonJS不支持异步；模块化开发怎么做； js 的几种模块规范；AMD 和 CMD 规范的区别；ES6 模块与 CommonJS 模块、AMD、CMD 的差异；requireJS 的核心原理是什么?(如何动态加载的?如何避免多次加载的?如何缓存的?)；JS 模块加载器的轮子怎么造,也就是如何实现一个模块加载器；require 模块引入的查找方式
 
@@ -235,8 +230,6 @@
 
 1. 事件流；浏览器的事件循环机制；浏览器下事件循环(Event Loop)；对浏览器事件循环的理解；Node.js的事件循环；Node和浏览器事件循环机制的区别；事件冒泡和捕获的区别；如何阻止事件冒泡；对事件委托的理解；执行顺序；process.nextTick；setImmediate 和 setTimeout;js 中倒计时的纠偏实现
 
-   
-
 2. 浏览器架构；说说浏览器渲染页面的过程；浏览器解析流程；从输入 url 到展示的过程；输入 URL 回车后经过哪些过程；当在浏览器中输入 URL 并且按下回车之后发生了什么；DNS完整的查询过程；浏览器架构；你对浏览器的理解；介绍一下你对浏览器内核的理解；常见的浏览器内核比较； 常见浏览器所用内核；浏览器的渲染原理；渲染过程中遇到 JS 文件怎么处理?(浏览器解析过程)；什么是文档的预解析?(浏览器解析过程)；CSS 如何阻塞文档解析?(浏览器解析过程)；渲染页面时常见哪些不良现象?(浏览器渲染过程)；如何优化关键渲染路径?(浏览器渲染过程)； 什么是重绘和回流?(浏览器绘制过程)；如何减少回流?(浏览器绘制过程)；为什么操作 DOM 慢?(浏览器绘制过程)；主流浏览器内核私有属性 css 前缀；浏览器的渲染过程；浏览器渲染优化；chrome的v8引擎属于渲染引擎么，举例说一下渲染引擎有哪些;把 script 标签放在页面的最底部的 body 封闭之前和封闭之后有什么区别?浏览器会如何解析它们
 
 3. 垃圾回收机制；内存泄露；浏览器的垃圾回收机制；新生代（副垃圾回收器）；老生代（主垃圾回收器）；引用计数法；哪些情况会导致内存泄漏；Web Worker；讲讲js垃圾回收机制；JS内存空间的管理；如何编写高性能的 Javascript；简单介绍一下 V8 引擎的垃圾回收机制；哪些操作会造成内存泄漏；
@@ -259,11 +252,11 @@
 
 12. 跨标签页通讯；域名发散与域名收敛；什么是同源策略；如何解决跨越问题； 如何实现浏览器内多个标签页之间的通信；什么是浏览器的同源政策；如何解决跨域问题；服务器代理转发时,该如何处理 cookie；简单谈一下 cookie ；
 
+    
+
 # Vue 相关
 
 1. 路由的钩子；vue-router的路由守卫；router和route的区别；路由传参和取参；路由钩子beforeEach三个参数；vue-router中的路由守卫有哪些；vue-router原理以及两种模式区别；vue-router用法；讲讲前端路由原理，比较一下history和hash这两种路由；前端有几种缓存方式；路由的hash和history模式的区别；router和route的区别；如何设置动态路由；路由守卫；vue-router 中的导航钩子函数；$route 和 $router 的区别；前端路由；什么是“前端路由”?什么时候适合使用“前端路由”?“前端路由”有哪些优点和缺点；Vue的路由实现:hash模式 和 history模式；Vue路由的钩子函数
-
-   
 
 2. Virtual Dom（虚拟DOM）；diff 算法；Vue的diff算法；Vue的数据为什么频繁变化但只会更新一次；讲讲Vue的虚拟DOM原理以及好处是什么，相对于手动操作DOM性能更好吗；讲讲Vue diff算法；vue2中虚拟DOM更新时标记差异怎么实现的，介绍一下它的原理；对虚拟DOM的理解；虚拟DOM就一定比真实DOM更快吗；虚拟DOM的解析过程；DIFF算法原理；什么是 Virtual DOM?为什么 Virtual DOM 比原生 DOM 快；如何比较两个 DOM 树的差异
 
@@ -315,11 +308,11 @@
 
 24. slot
 
+    
+
 # webpack
 
 1. 对webpack的理解；webpack的构建流程；Webpack构建流程简单说一下；模块打包原理知道吗；文件监听原理呢；文件指纹是什么，怎么用；说一下 Webpack 的热更新原理吧；vite和webpack的区别；谈谈你对 webpack 的看法
-
-   
 
 2. webpack常见的优化方案；如何优化 Webpack 的构建速度；在实际工程中，配置文件上百行乃是常事，如何保证各个loader按照预想方式工作；Webpack的Tree Shaking原理；如何提高webpack的打包速度；vite比webpack快在哪里
 
@@ -343,8 +336,6 @@
 
 1. 图片懒加载原理；前端需要注意哪些 SEO；前端性能优化 ；前端性能优化方案；图片的懒加载和预加载；
 
-   
-
 2. 节流和防抖；谈一下防抖、节流的概念；如何实现防抖和节流；介绍一下 js 的节流与防抖
 
 3. SPA首屏为什么加载慢？
@@ -355,11 +346,11 @@
 
 6. 性能优化方式有哪些：HTML & CSS、JS、Vue、Webpack优化、网络优化
 
+   
+
 # 在线笔试题
 
 1. js 实现一个函数,完成超过范围的两个大整数相加功能
-
-   
 
 2. js 如何实现数组扁平化
 
@@ -393,8 +384,6 @@
 # 其他
 
 1. 类组件的生命周期，函数组件使用哪些hook来代替的哪些生命周期
-
-   
 
 2. 对于Fiber架构理解
 
